Added replacing words with flashtext

--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -20,7 +20,9 @@
     "* [N-grams](#N-grams)\n",
     "    * [Spelling Recomender](#Spelling-Recomender)\n",
     "    * [Spell Correction : TextBlob](#Spell-Correction-:-TextBlob)\n",
-    "    * [Predicting text](#Predicting-text)"
+    "    * [Predicting Text](#Predicting-text)\n",
+    "* [Replacing Words](#Replacing-words)\n",
+    "* [References](#References)"
    ]
   },
   {
@@ -655,9 +657,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['apeling', 'misspelling', 'recommender', 'corpulent']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def edit_dist_autcorrector(entries=entries):\n",
     "    \n",
@@ -680,9 +693,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "spelling\n",
+      "spelling\n",
+      "reccomender\n",
+      "corpulent\n"
+     ]
+    }
+   ],
    "source": [
     "from textblob import TextBlob\n",
     "entries=['spleling', 'mispelling', 'reccomender', 'cormulent']\n",
@@ -707,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,11 +748,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(<function __main__.<lambda>.<locals>.<lambda>()>,\n",
+       "            {'to': 0.036303630363036306,\n",
+       "             \"'\": 0.5247524752475248,\n",
+       "             'enjoyed': 0.006600660066006601,\n",
+       "             'said': 0.0165016501650165,\n",
+       "             'in': 0.019801980198019802,\n",
+       "             '.': 0.066006600660066,\n",
+       "             'reduces': 0.0033003300330033004,\n",
+       "             'with': 0.0033003300330033004,\n",
+       "             'had': 0.009900990099009901,\n",
+       "             'will': 0.013201320132013201,\n",
+       "             'and': 0.0231023102310231,\n",
+       "             'for': 0.006600660066006601,\n",
+       "             ',': 0.0627062706270627,\n",
+       "             'regains': 0.006600660066006601,\n",
+       "             ',\"': 0.006600660066006601,\n",
+       "             'imports': 0.0033003300330033004,\n",
+       "             'would': 0.019801980198019802,\n",
+       "             'following': 0.0033003300330033004,\n",
+       "             'is': 0.009900990099009901,\n",
+       "             'on': 0.006600660066006601,\n",
+       "             'deserved': 0.0033003300330033004,\n",
+       "             'under': 0.0033003300330033004,\n",
+       "             'must': 0.0033003300330033004,\n",
+       "             'cheaper': 0.0033003300330033004,\n",
+       "             'space': 0.0033003300330033004,\n",
+       "             '\"': 0.006600660066006601,\n",
+       "             'has': 0.0165016501650165,\n",
+       "             'asking': 0.006600660066006601,\n",
+       "             'was': 0.0165016501650165,\n",
+       "             'where': 0.0033003300330033004,\n",
+       "             'aims': 0.0033003300330033004,\n",
+       "             'reached': 0.0033003300330033004,\n",
+       "             'some': 0.0033003300330033004,\n",
+       "             'if': 0.0033003300330033004,\n",
+       "             'from': 0.0033003300330033004,\n",
+       "             'may': 0.0033003300330033004,\n",
+       "             'of': 0.009900990099009901,\n",
+       "             'but': 0.0033003300330033004,\n",
+       "             'switches': 0.0033003300330033004,\n",
+       "             'promoting': 0.0033003300330033004,\n",
+       "             'cannot': 0.006600660066006601,\n",
+       "             'each': 0.0033003300330033004,\n",
+       "             'recover': 0.0033003300330033004,\n",
+       "             'does': 0.0033003300330033004,\n",
+       "             'a': 0.0033003300330033004,\n",
+       "             'never': 0.006600660066006601,\n",
+       "             'can': 0.0033003300330033004,\n",
+       "             'went': 0.0033003300330033004,\n",
+       "             'ranged': 0.0033003300330033004,\n",
+       "             '50': 0.0033003300330033004,\n",
+       "             'avoid': 0.006600660066006601})"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model['the', 'country']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Replacing words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model['the', 'country']"
+    "from flashtext import KeywordProcessor #flashtext is faster than regex!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'This is the sentence where we have the New-Word word.'"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "keyword_processor = KeywordProcessor()\n",
+    "keyword_processor.add_keyword('Original', 'New-Word')\n",
+    "new_sentence = keyword_processor.replace_keywords('This is the sentence where we have the original word.')\n",
+    "new_sentence"
    ]
   },
   {
@@ -738,7 +863,8 @@
     "## References\n",
     "* https://textblob.readthedocs.io/en/dev/quickstart.html\n",
     "* https://nlpforhackers.io/language-models/\n",
-    "* http://www.nltk.org"
+    "* http://www.nltk.org\n",
+    "* https://pypi.org/project/flashtext/"
    ]
   },
   {
